--- a/src/app/admin/report-roadtax/report-roadtax.component.html
+++ b/src/app/admin/report-roadtax/report-roadtax.component.html
@@ -1,1 +1,155 @@
-<p>report-roadtax works!</p>
+<section class="section">
+  <div class="container">
+    <div class="d-block mt-5 row">
+      <form method="" action="" class="d-flex justify-content-center">
+        <div class="col-md-4 form-group pr-0">
+          <i class="fa-search fas ml-3 position-absolute text-muted mt-3" aria-hidden="true"></i>
+          <input class="btn-lg form-control pl-5 w-100" type="text" placeholder="BJQ 1721" aria-label="Search">
+        </div>
+        <div class="col-auto form-group pl-3">
+          <button type="submit" class="btn btn-info btn-lg shadow-none">Search</button>
+        </div>
+      </form>
+    </div>
+    <div class="bg-white mb-5 row">
+      <h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4 w-100">Car Register #AKF6543</h2>
+      <form class="d-flex w-100">
+        <div class="border-right col-md-6 pl-4 pr-5">
+          <div class="form-group row mt-3">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Car Reg. No.</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="Car Reg. No.">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Model Car</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="Perodua - Axia">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Chasis Engine</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="123445gv">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Car Make</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="Perodua">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Year Manfacture</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="2015">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Car Spec</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="Advance Auto 1000cc">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Name</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="Muzaidi Samad">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">NRIC</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="901213134112">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Previous takaful insurance</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="Takaful Malaysia">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Cover Type</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="Comprehensive Takaful">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Sum Insured</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="RM 80 000">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Extra Coverage</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="RM90.00">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">NCD Effective Date</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="12 Dec 2021">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Phone Number</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="011-21414141">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Email</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="Muz90@gmail.com">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Address</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control form-group" placeholder="-">
+              <input type="text" class="form-control " placeholder="-">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-3 col-form-label">Postcode</label>
+            <div class="col-sm-9">
+              <input type="text" class="form-control" placeholder="43000">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group row  pl-4 pr-5 mt-3">
+            <label class="col-sm-4 col-form-label font-weight-bold">Status</label>
+            <div class="col-sm-6">
+              <select class="font-weight-600 form-control">
+                <option>Topup</option>
+                <option>Refund</option>
+                <option>Refund</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-group row  pl-4 pr-5">
+            <label class="col-sm-4 col-form-label font-weight-bold"> </label>
+            <div class="col-sm-6">
+              <input type="text" class="form-control" placeholder="Amount">
+            </div>
+          </div>
+          <div class="form-group row  pl-4 pr-5">
+            <label class="col-sm-4 col-form-label font-weight-bold">Remarks</label>
+            <div class="col-sm-6">
+              <textarea class="form-control" placeholder="Summon"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
+              <button class="btn bg-transparent border-0 w-25">Cancel</button>
+              <button class="bg-green btn text-white w-25">Update</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
