--- a/src/app/shared/dialog/add-user/add-user.component.html
+++ b/src/app/shared/dialog/add-user/add-user.component.html
@@ -15,62 +15,63 @@
                     <label class="col-sm-3 col-form-label">User Name: *</label>
                     <div class="col-sm-9">
                       <input type="text" class="form-control" formControlName="userName">
-                      <small [class.d-none]="addUserForm.get('userName').valid || addUserForm.get('userName').untouched"
-                        class="text-danger">User Name is required</small>
+                      <div [class.d-none]="addUserForm.get('userName').valid || addUserForm.get('userName').untouched"
+                        class="error">User Name is required</div>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">User ID: *</label>
                     <div class="col-sm-9">
                       <input type="email" class="form-control" formControlName="userId">
-                      <small [class.d-none]="addUserForm.get('userId').valid || addUserForm.get('userId').untouched"
-                        class="text-danger">User ID is required</small>
+                      <div [class.d-none]="addUserForm.get('userId').valid || addUserForm.get('userId').untouched"
+                        class="error">User ID is required</div>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Email: *</label>
                     <div class="col-sm-9">
                       <input type="email" class="form-control" formControlName="email">
-                      <small [class.d-none]="addUserForm.get('email').valid || addUserForm.get('email').untouched"
-                        class="text-danger">Email is required</small>
+                      <div [class.d-none]="addUserForm.get('email').valid || addUserForm.get('email').untouched"
+                        class="error">Email is required</div>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Role: *</label>
                     <div class="col-sm-9">
                       <select class="form-control custom-select custom-select-lg" formControlName="role">
+                        <option [disabled]="true" value="" selected>Select Role</option>
                         <option *ngFor="let role of roles" value={{role}}>{{role}}</option>
                       </select>
-                      <small [class.d-none]="addUserForm.get('role').valid || addUserForm.get('role').untouched"
-                        class="text-danger">Role is required</small>
+                      <div [class.d-none]="addUserForm.get('role').valid || addUserForm.get('role').untouched"
+                        class="error">Role is required</div>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Department: *</label>
                     <div class="col-sm-9">
                       <input type="email" class="form-control" formControlName="department">
-                      <small
+                      <div
                         [class.d-none]="addUserForm.get('department').valid || addUserForm.get('department').untouched"
-                        class="text-danger">Department is required</small>
+                        class="error">Department is required</div>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">New Password: *</label>
                     <div class="col-sm-9">
                       <input type="password" class="form-control" formControlName="password">
-                      <small [class.d-none]="addUserForm.get('password').valid || addUserForm.get('password').untouched"
-                        class="text-danger">Password is required</small>
+                      <div [class.d-none]="addUserForm.get('password').valid || addUserForm.get('password').untouched"
+                        class="error">Password is required</div>
                     </div>
                   </div>
                   <div class="form-group row">
                     <label class="col-sm-3 col-form-label">Repeat Password: *</label>
                     <div class="col-sm-9">
                       <input type="password" class="form-control" formControlName="repeatPassword">
-                      <small
+                      <div
                         [class.d-none]="addUserForm.get('repeatPassword').valid || addUserForm.get('repeatPassword').untouched"
-                        class="text-danger">Repeat Password is required</small>
-                      <small *ngIf="addUserForm.errors?.misMatch" class="text-danger">Password and Repeat Password does
-                        not match</small>
+                        class="error">Repeat Password is required</div>
+                      <div *ngIf="addUserForm.errors?.misMatch" class="error">Password and Repeat Password does
+                        not match</div>
                     </div>
                   </div>
                 </div>
