--- a/src/app/admin/user-management/user-management.component.css
+++ b/src/app/admin/user-management/user-management.component.css
@@ -1,3 +1,11 @@
 table {
   width: 100%;
 }
+
+@media only screen and (min-device-width: 220px) and (max-device-width: 1024px) {
+  table {
+    width: 100%;
+    overflow-x: scroll;
+    display: block;
+  }
+}
