--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -6,19 +6,16 @@
           <div class="dashboard-login card">
             <div class="card-body">
               <h2>Forgot Password?</h2>
-              <p>
-                Enter your email address and we’ll send you a reset password
-                link!
-              </p>
-              <form>
+              <p>Enter your email address and we’ll send you a reset password link!</p>
+              <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit(forgotPasswordForm.valid)">
                 <div class="form-group">
-                  <input id="email" type="email" name="email" placeholder="Your Email.." class="form-control rounded-0"
-                    [(ngModel)]="forgotPasswordData.email" />
+                  <input id="email" type="email" formConstrolName="email" placeholder="Your Email.."
+                    class="form-control rounded-0" />
+                  <div *ngIf="forgotPasswordForm.get('email').invalid && forgotPasswordForm.get('email').touched"
+                    class="error">Email is required</div>
                 </div>
                 <div class="form-group mt-5">
-                  <button type="button" (click)="forgotPassword()" class="btn btn-info w-50 reset-btn">
-                    Reset Password
-                  </button>
+                  <button type="submit" class="btn btn-info w-50 reset-btn">Reset Password</button>
                 </div>
               </form>
             </div>
