--- a/src/app/auth/invalid/invalid.component.html
+++ b/src/app/auth/invalid/invalid.component.html
@@ -8,7 +8,8 @@
                             <p><span class="btn-danger btn-circle-outline btn-lg"><i class="fa fa-times"></i></span></p>
                             <h2>Authentication!</h2>
                             <p>Email does not exist in the system. Please enter the right email address.</p>
-                            <button type="button" class="btn btn-lg btn-info reset-btn font-19">Ok</button>
+                            <button type="button" class="btn btn-lg btn-info reset-btn font-19"
+                                (click)="clickHandler()">Ok</button>
                         </div>
                     </div>
                 </div>
