--- a/src/app/shared/dialog/delete-user/delete-user.component.html
+++ b/src/app/shared/dialog/delete-user/delete-user.component.html
@@ -8,7 +8,7 @@
             <img class="pb-4 pt-4" src="assets/img/icons/delete.svg">
             <h2 class="font-28 text-dark">You are about to delete this user</h2>
             <p class="font-16 font-weight-normal">
-              This will delete your user from user management Are you sure?</p>
+              This will delete your user from user management. Are you sure?</p>
           </div>
         </div>
         <div class="modal-footer bg-whitesmoke br">
