--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,3 +1,10 @@
 .dropdown-item {
   cursor: pointer;
 }
+.navbar .nav-link.nav-link-user:hover {
+  color: #fff !important;
+}
+.navbar-expand-lg .navbar-nav .nav-link:hover {
+  cursor: pointer;
+  color: #fff !important;
+}
