--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1857,6 +1857,7 @@
 .bg-blue-grey {
   background-color: #607d8b !important;
   color: #fff;
+  padding: 10px 0;
 }
 
 .bg-blue-grey .content .number,
@@ -2545,6 +2546,7 @@ a:not(.btn-social-icon):not(.btn-social):not(.page-link) .ion {
 
 .bg-light {
   background-color: #e3eaef !important;
+  padding: 10px 0;
 }
 
 .bg-dark {
