--- a/src/styles.css
+++ b/src/styles.css
@@ -147,9 +147,14 @@ body {
   content: "";
 }
 
+.menu_title {
+  cursor: pointer;
+}
+
 .error {
   width: 100%;
-  margin-top: 0.25rem;
   font-size: 80%;
   color: #dc3545;
+  text-align: left;
+  margin-top: 0.25rem;
 }
