Table Design Fixed

--- a/src/app/admin/notification/notification.component.html
+++ b/src/app/admin/notification/notification.component.html
@@ -1,1 +1,82 @@
-<p>notification works!</p>
+<div class="second_top_bar bg-white p-10">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 pl-0 align-self-lg-center">
+        <h4 class="font-17 text-dark">
+          <span class="font-weight-600">
+            Customer Database
+          </span>
+        </h4>
+      </div>
+      <div class="col-md-6 d-flex justify-content-end pr-0">
+        <form>
+          <div class="row">
+            <div class="col-md-6">
+              <i class="fa-search fas ml-3 position-absolute text-muted" aria-hidden="true"></i>
+              <input class="form-control pl-5 w-100" type="text" placeholder="Search" aria-label="Search" name="search">
+            </div>
+            <div class="col-md-6">
+              <select name="Filter" class="font-weight-600 form-control">
+                <option>Weekly</option>
+              </select>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<section class="section">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="table-responsive">
+        <table class="table table-bordered bg-white">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Car Register</th>
+              <th>Name</th>
+              <th>Phone Number</th>
+              <th>Email</th>
+              <th>Messages</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr class="font-weight-600">
+              <td> <input type="checkbox" value=""></td>
+              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
+              <td>Ujang selamat</td>
+              <td>011-21414141</td>
+              <td>Muz90@gmail.com</td>
+              <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam …</td>
+            </tr>
+            <tr class="font-weight-600">
+              <td> <input type="checkbox" value=""></td>
+              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
+              <td>Ujang selamat</td>
+              <td>011-21414141</td>
+              <td>Muz90@gmail.com</td>
+              <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam …</td>
+            </tr>
+            <tr class="font-weight-600">
+              <td> <input type="checkbox" value=""></td>
+              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
+              <td>Ujang selamat</td>
+              <td>011-21414141</td>
+              <td>Muz90@gmail.com</td>
+              <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam …</td>
+            </tr>
+            <tr class="font-weight-600">
+              <td> <input type="checkbox" value=""></td>
+              <td data-toggle="collapse" data-target="#demo1" class="accordion-toggle text-info">AKF 6543</td>
+              <td>Ujang selamat</td>
+              <td>011-21414141</td>
+              <td>Muz90@gmail.com</td>
+              <td>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam …</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</section>
