--- a/src/app/admin/common-basket/common-basket.component.html
+++ b/src/app/admin/common-basket/common-basket.component.html
@@ -15,15 +15,15 @@
           </span>
         </h4>
       </div>
-      <div class="col-md-6 d-flex justify-content-end pr-0">
+      <div class="col-md-6 pr-0">
         <form #filterForm="ngForm">
           <div class="row">
-            <div class="col-md-6">
-              <i class="fa-search fas ml-3 position-absolute text-muted" aria-hidden="true"></i>
-              <input class="form-control pl-5 w-100" type="text" placeholder="Search" aria-label="Search" name="search"
+            <div class="col-md-8 search_bar">
+              <i class="fa-search fas ml-3 position-absolute text-muted mt-3" aria-hidden="true"></i>
+              <input class="form-control pl-5" type="text" placeholder="Search" aria-label="Search" name="search"
                 [(ngModel)]="search" (keyup)="searchFor($event.target.value)">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4 month_bar">
               <select [(ngModel)]="filter" name="Filter" class="font-weight-600 form-control"
                 (ngModelChange)="onFilterChanged($event)">
                 <option *ngFor="let filter of filters" value="{{filter.value}}">{{filter.option}}</option>
@@ -42,117 +42,121 @@
         <h1>No Data</h1>
       </ng-template>
       <ng-template #elseBlock>
-        <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
-          <ng-container matColumnDef="vehiclePlateNo">
-            <th scope="col" mat-header-cell *matHeaderCellDef> Car Register </th>
-            <td mat-cell *matCellDef="let element"> {{element.vehiclePlateNo}} </td>
-          </ng-container>
+        <div class="responsive-table-custom">
+          <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8 table-bordered">
+            <ng-container matColumnDef="vehiclePlateNo">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Car Register </th>
+              <td class="font-14 font-weight-600 text-info" mat-cell *matCellDef="let element">
+                {{element.vehiclePlateNo}} </td>
+            </ng-container>
 
-          <ng-container matColumnDef="customerName">
-            <th scope="col" mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.customerName}} </td>
-          </ng-container>
+            <ng-container matColumnDef="customerName">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Name </th>
+              <td class="font-14 font-weight-600" mat-cell *matCellDef="let element"> {{element.customerName}} </td>
+            </ng-container>
 
-          <ng-container matColumnDef="paymentDate">
-            <th scope="col" mat-header-cell *matHeaderCellDef> Payment Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.paymentDate | date: 'dd MMM YYYY'}} </td>
-          </ng-container>
+            <ng-container matColumnDef="paymentDate">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Payment Date </th>
+              <td class="font-14 font-weight-600" mat-cell *matCellDef="let element"> {{element.paymentDate | date: 'dd
+                MMM YYYY'}} </td>
+            </ng-container>
 
-          <ng-container matColumnDef="principal">
-            <th scope="col" mat-header-cell *matHeaderCellDef> Takaful Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.principal}} </td>
-          </ng-container>
+            <ng-container matColumnDef="principal">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Takaful Name </th>
+              <td class="font-14 font-weight-600" mat-cell *matCellDef="let element"> {{element.principal}} </td>
+            </ng-container>
 
-          <ng-container matColumnDef="carModel">
-            <th scope="col" mat-header-cell *matHeaderCellDef> Model Car </th>
-            <td mat-cell *matCellDef="let element"> {{element.carModel}} </td>
-          </ng-container>
+            <ng-container matColumnDef="carModel">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Model Car </th>
+              <td mat-cell *matCellDef="let element"> {{element.carModel}} </td>
+            </ng-container>
 
-          <ng-container matColumnDef="marketValue">
-            <th scope="col" mat-header-cell *matHeaderCellDef> Market Value </th>
-            <td mat-cell *matCellDef="let element">
-              <button class="btn btn-outline-secondary text-muted width-per-90 text-dark font-weight-600"
-                *ngIf="element.marketValue !== null ">
-                {{element.marketValue}}</button>
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="marketValue">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Market Value </th>
+              <td mat-cell *matCellDef="let element">
+                <button class="btn btn-outline-secondary text-muted width-per-90 text-dark font-weight-600"
+                  *ngIf="element.marketValue !== null ">
+                  {{element.marketValue}}</button>
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="status">
-            <th scope="col" mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let element">
-              <button class="bg-amber btn rounded-pill width-per-100 text-dark font-weight-600"
-                (click)="element.isExpanded = !element.isExpanded">{{element.status}}</button>
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="status">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Status </th>
+              <td mat-cell *matCellDef="let element">
+                <button class="bg-amber btn rounded-pill width-per-100 text-dark font-weight-600"
+                  (click)="element.isExpanded = !element.isExpanded">{{element.status}}</button>
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="customerService">
-            <th scope="col" mat-header-cell *matHeaderCellDef> Customer Service </th>
-            <td mat-cell *matCellDef="let element">
-              <button *ngIf="element.customerService !== '' " class="btn btn-light rounded-pill font-weight-600">
-                {{element.customerService}}
-              </button>
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="customerService">
+              <th scope="col" mat-header-cell *matHeaderCellDef> Customer Service </th>
+              <td mat-cell *matCellDef="let element">
+                <button *ngIf="element.customerService !== '' " class="btn btn-light rounded-pill font-weight-600">
+                  {{element.customerService}}
+                </button>
+              </td>
+            </ng-container>
 
-          <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-          <ng-container matColumnDef="expandedDetail">
-            <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-              <div class="example-element-detail"
-                [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                <div class="example-element-description">
-                  <ng-container [ngSwitch]="routeData.page">
+            <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+            <ng-container matColumnDef="expandedDetail">
+              <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+                <div class="example-element-detail"
+                  [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                  <div class="example-element-description">
+                    <ng-container [ngSwitch]="routeData.page">
 
-                    <div *ngSwitchCase="'NCD'" [item]="routeData">
-                      <div *ngIf="routeData.subCategory === 'Urgent' ">
-                        <app-follow-urgent-ncd [currentData]="detailComponentData"
-                          *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
-                        </app-follow-urgent-ncd>
+                      <div *ngSwitchCase="'NCD'" [item]="routeData">
+                        <div *ngIf="routeData.subCategory === 'Urgent' ">
+                          <app-follow-urgent-ncd [currentData]="detailComponentData"
+                            *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                          </app-follow-urgent-ncd>
+                        </div>
+                        <div *ngIf="routeData.subCategory === 'Assist' ">
+                          <app-follow-assist-ncd [currentData]="detailComponentData"
+                            *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                          </app-follow-assist-ncd>
+                        </div>
                       </div>
-                      <div *ngIf="routeData.subCategory === 'Assist' ">
+
+                      <div *ngSwitchCase="'High Risk'" [item]="routeData">
+                        <app-follow-urgent-risk [currentData]="detailComponentData"
+                          *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                        </app-follow-urgent-risk>
+                      </div>
+
+                      <div *ngSwitchCase="'Roadtax'" [item]="routeData">
+                        <app-follow-urgent-tax [currentData]="detailComponentData"
+                          *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                        </app-follow-urgent-tax>
+                      </div>
+
+                      <div *ngSwitchCase="'Market Value'" [item]="routeData">
+                        <app-follow-assist-market [currentData]="detailComponentData"
+                          *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
+                        </app-follow-assist-market>
+                      </div>
+
+                      <div *ngSwitchCase="'Refund'" [item]="routeData">
                         <app-follow-assist-ncd [currentData]="detailComponentData"
                           *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
                         </app-follow-assist-ncd>
                       </div>
-                    </div>
 
-                    <div *ngSwitchCase="'High Risk'" [item]="routeData">
-                      <app-follow-urgent-risk [currentData]="detailComponentData"
-                        *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
-                      </app-follow-urgent-risk>
-                    </div>
-
-                    <div *ngSwitchCase="'Roadtax'" [item]="routeData">
-                      <app-follow-urgent-tax [currentData]="detailComponentData"
-                        *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
-                      </app-follow-urgent-tax>
-                    </div>
-
-                    <div *ngSwitchCase="'Market Value'" [item]="routeData">
-                      <app-follow-assist-market [currentData]="detailComponentData"
-                        *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
-                      </app-follow-assist-market>
-                    </div>
-
-                    <div *ngSwitchCase="'Refund'" [item]="routeData">
-                      <app-follow-assist-ncd [currentData]="detailComponentData"
-                        *ngIf="detailComponentData !== '' && detailComponentData === element.vehiclePlateNo ">
-                      </app-follow-assist-ncd>
-                    </div>
-
-                    <h1 *ngSwitchDefault [item]="currentItem">Default Detail Component</h1>
-                  </ng-container>
+                      <h1 *ngSwitchDefault [item]="currentItem">Default Detail Component</h1>
+                    </ng-container>
+                  </div>
                 </div>
-              </div>
-            </td>
-          </ng-container>
+              </td>
+            </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-          <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
-            [class.example-expanded-row]="expandedElement === element" (click)="onTableExpand(element.vehiclePlateNo)"
-            (click)="expandedElement = expandedElement === element ? null : element">
-          </tr>
-          <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-        </table>
+            <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+            <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+              [class.example-expanded-row]="expandedElement === element" (click)="onTableExpand(element.vehiclePlateNo)"
+              (click)="expandedElement = expandedElement === element ? null : element">
+            </tr>
+            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+          </table>
+        </div>
         <mat-paginator [pageSize]="10" (page)="pageChanged($event)"></mat-paginator>
       </ng-template>
     </div>
