--- a/src/app/basket-details/follow-urgent-ncd/follow-urgent-ncd.component.html
+++ b/src/app/basket-details/follow-urgent-ncd/follow-urgent-ncd.component.html
@@ -1,6 +1,6 @@
-<h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4">Car Register #{{currentData}}</h2>
+<h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4 pt-2 pb-2">Car Register #{{currentData}}</h2>
 <form [formGroup]="basketDetailForm">
-  <div class="row d-flex">
+  <div class="pl-4 row">
     <div class="col-md-6 border-right pl-4 pr-5">
       <div class="form-group row mt-3">
         <label for="inputEmail3" class="col-sm-3 col-form-label">Car Reg. No.</label>
