--- a/src/app/widgets/issue-widget/issue-widget.component.html
+++ b/src/app/widgets/issue-widget/issue-widget.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex dashboard_right_sidebar flex-wrap">
+<div class="dashboard_right_sidebar flex-wrap">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xl-12 pt-3">
     <span class="font-15 font-weight-600 text-muted">Today</span>
     <h4 class="font-18 theme_color">{{today | date: 'dd MMM YYYY'}}</h4>
